Adjust image with max-width as opposed to w-50 which takes up only 50% of its parent container, causing it to leave whitespace. This fixes that.

--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,5 @@
 .parallelogram-image {
+  width: auto;
+  max-width: 300px;
+  height: auto;
 }
